# Sample2

./: .gitignore  CMakeLists.txt  CMakePresets.json  pyrightconfig.json
.claude/: settings.local.json
scripts/: actuarial.py  assumptions.py  eia_credit_script.py  eia_credit_script_dict.py  eia_credit_script_struct.py  eia_credit_script_vec.py  hooks_config.json  lapse_script.py  lapse_script_dict.py  lapse_script_struct.py  lapse_script_vec.py  mortality_script.py  mortality_script_dict.py  mortality_script_struct.py  mortality_script_vec.py  restricted_dict.py  user_script.py
src/: actuarial_functions.cpp  actuarial_functions.h  bindings.cpp  main.cpp  projection_context.h  projection_engine.cpp  projection_engine.h  runtime_context.h
src_codegen/: codegen.py  main.cpp  projection_engine.cpp  projection_engine.h  registry.json
src_dict/: main.cpp  projection_engine.cpp  projection_engine.h
src_generic/: bindings.cpp  main.cpp  projection_engine.cpp  runtime_context.h  script_context.h  script_registry.h
src_lambda/: main.cpp  projection_engine.cpp  projection_engine.h  register_module.cpp  register_module.h  runtime_context.h
src_struct/: bindings.cpp  hook_registry.h  main.cpp  projection_engine.cpp  projection_engine.h  script_contexts.h
src_tls/: bindings.cpp  main.cpp  projection_engine.cpp  projection_engine.h  runtime_context.h  script_contexts.h
src_tls_vec/: bindings.cpp  main.cpp  projection_engine.cpp  projection_engine.h  runtime_context.h  script_contexts.h
stubs/: actuarial.pyi
